[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django_flex_blob"
dynamic = ["version"]
description = "A django app dedicated for managing media files and access to them"
readme = "README.rst"
authors = [
  {name = "Ali Avani", email = "ali.avani.1410@gmail.com"}
  {name = "Saman Zand Haghighi", email = "samanzandh@gmail.com"},
]
maintainers = [
  {name = "Ali Avani", email = "ali.avani.1410@gmail.com"}
  {name = "Saman Zand Haghighi", email = "samanzandh@gmail.com"},
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [

]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/ali-avani/django-flex-blob/issues"
changelog = "https://github.com/ali-avani/django-flex-blob/blob/master/changelog.md"
homepage = "https://github.com/ali-avani/django-flex-blob"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]


[tool.setuptools.dynamic]
version = {attr = "flex_blob.__version__"}

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

